cmake_minimum_required(VERSION 3.16)
project(first)

set(CMAKE_CXX_STANDARD 14)

add_executable(first main.cpp)
add_executable(kmp kmp.cpp)
add_executable(acm1 acm_比赛积分.cpp)
add_executable(acm2 acm_因子.cpp)
add_executable(acm3 acm_位置数字.cpp)
add_executable(acm4 acm_n次方.cpp)
add_executable(acm5 acm_拼接最大数.cpp)
add_executable(acm6 acm_红烧肉.cpp)
add_executable(acm7 acm_走楼梯.cpp)
add_executable(acm8 acm_梵高.cpp)
add_executable(acm9 acm_舞曲.cpp)
add_executable(acm10 acm_字符环.cpp)
add_executable(acm11 acm_SeparateConnections.cpp)
add_executable(acm12 acm_比昨天更多的棒棒糖.cpp)
add_executable(acm13 acm_皇后问题.cpp)
add_executable(acm14 acm_渴求真实的天使.cpp)
add_executable(acm15 acm_进制转换.cpp)
add_executable(acm16 acm_神秘信息.cpp)
add_executable(acm17 acm_单词出现次数.cpp)
add_executable(acm18 acm_字串变换.cpp)
add_executable(acm19 acm_字串非重复字符数排序.cpp)
add_executable(test1 test1.cpp)
add_executable(zj-kmp zj-kmp.cpp)
add_executable(sort sort.cpp)
add_executable(zj-sort zj-sort.cpp)
add_executable(abba AB到BA.CPP)
add_executable(twoyear-days 两年相差时间.cpp)
add_executable(bst 二叉排序树.cpp)
add_executable(bt-fdg 二叉树中序非递归.cpp)
add_executable(bt-level-search 二叉树按层遍历.cpp)
add_executable(hfm-code 从根开始建哈弗曼编码.cpp)
add_executable(jiou-fenge 分割奇偶.cpp)
add_executable(word-rate 单词几率.cpp)
add_executable(link-table 单链表.cpp)
add_executable(link-table-fastsort 单链表快速排序.cpp)
add_executable(cycle-link-table 双向循环链表频度.cpp)
add_executable(heap-sort 堆排序.cpp)
add_executable(multi-plus 多项式相加.cpp)
add_executable(sub-string 字符串子集.cpp)
add_executable(resort-link-table 对某个链表重排序.cpp)
add_executable(pre-mid2post 已知先序中序求后序（非）.cpp)
add_executable(brackets-match 括号匹配.cpp)
add_executable(sort-tree-create-del 排序树创建与删除.cpp)
add_executable(max-int-set 整数集合和为最大子数组.cpp)
add_executable(undirect-graph-matrix 无向图-邻接矩阵.cpp)
add_executable(is_bbt 是否为平衡二叉树.cpp)
add_executable(is_cbt 是否完全二叉树.cpp)
add_executable(longest_word 最长重复单词.cpp)
add_executable(direct-graph-link-table 有向图-邻接表.cpp)
add_executable(tree 树.cpp)
add_executable(pre-mid-create-bintree 根据先序中续建二叉树.cpp)
add_executable(dfs-bfs 深度广度遍历.cpp)
add_executable(longest-word 相同字符串最长单词.cpp)
add_executable(thread-bin-tree 线索二叉树.cpp)
add_executable(jinzhi-convert 进制转换.cpp)
add_executable(nibolan 逆波兰求值.cpp)
add_executable(link-matrix 邻接矩阵.cpp)
add_executable(test-thread test_thread.cpp)
add_executable(test-vector test_vector.cpp)
add_executable(sequence-table 顺序表.cpp)
add_executable(acm100 acm_学生成绩排序.cpp)
add_executable(acm101 acm_字符环.cpp)
add_executable(acm102 acm_上古计算机.cpp)
add_executable(acm103 acm_吉吉木的野望.cpp)
add_executable(acm104 acm_围栏.cpp)
add_executable(acm105 acm_邮件地址排序.cpp)
add_executable(acm106 acm_她的名字.cpp)
add_executable(acm107 acm_小学生算术.cpp)
add_executable(acm108 acm_奇怪的排序题.cpp)
add_executable(acm109 acm_灌水.cpp)
add_executable(acm110 acm_安全驾驶.cpp)
add_executable(acm111 acm_按数据中1的位数排序.cpp)
add_executable(acm112 acm_Sumofdigit.cpp)
add_executable(acm113 acm_Capitalize.cpp)
add_executable(acm114 acm_PrimesPair.cpp)
add_executable(acm115 acm_排序去重.cpp)
add_executable(acm116 acm_数学题.cpp)
